--- a/templates/registerpage.html
+++ b/templates/registerpage.html
@@ -7,30 +7,39 @@
     <title>register</title>
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }} text-center" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="d-flex justify-content-center " >
-        <form class="bg-light p-5 " method="POST">
+        <form class="bg-light p-5" method="POST">
             <h1 class="text-center">register</h1>
             <div class="form-group">
-            <label for="username">fulname</label>
-            <input type="text" class="form-control px-5" id="username" name="username" placeholder="Enter your fulname">
+                <label for="fullname">Full Name</label>
+                <input type="text" class="form-control px-5" id="fullname" name="fullname" placeholder="Enter your full name">
             </div>
             <div class="form-group">
-            <label for="username">email</label>
-            <input type="text" class="form-control px-5" id="username" name="username" placeholder="Enter your email">
+                <label for="email">Email</label>
+                <input type="text" class="form-control px-5" id="email" name="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control px-5" id="password" name="password" placeholder="Enter your password">
+                <label for="password">Password</label>
+                <input type="password" class="form-control px-5" id="password" name="password" placeholder="Enter your password">
             </div>
             <div class="form-group">
-                <label for="password">confirm Password</label>
-                <input type="password" class="form-control px-5" id="password" name="password" placeholder="confirm your password">
+                <label for="password">confirm your Password</label>
+                <input type="password" class="form-control px-5" id="cpassword" name="cpassword" placeholder="confirm your Password">
             </div>
             <div class="text-center">
-            <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-        </form>
-        </div>
+        </form>        
+    </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
