--- a/templates/registerpage.html
+++ b/templates/registerpage.html
@@ -14,6 +14,7 @@
                     {{ message }}
                 </div>
             {% endfor %}
+            {% set messages = [] %} 
         {% endif %}
     {% endwith %}
     <div class="d-flex justify-content-center " >
