--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>register</title>
+    <title>login</title>
 </head>
 <body>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} text-center " role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+    {% with messagess = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messagess %}
+                <div class="alert alert-{{ category }} text-center " role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% set messages = [] %} 
+        {% endif %}
+    {% endwith %}
     <div class="d-flex justify-content-center " >
         <form class="bg-light p-5" method="POST">
             <h1 class="text-center">login</h1>
@@ -24,7 +25,7 @@
                 <input type="text" class="form-control px-5" id="email" name="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Pasword</label>
                 <input type="password" class="form-control px-5" id="password" name="password" placeholder="Enter your password">
             </div>
             <div class="text-center">
