--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -3,36 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>login</title>
 </head>
 <body>
-    {% with messagess = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messagess %}
-                <div class="alert alert-{{ category }} text-center " role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
-            {% set messages = [] %} 
-        {% endif %}
-    {% endwith %}
-    <div class="d-flex justify-content-center " >
-        <form class="bg-light p-5" method="POST">
-            <h1 class="text-center">login</h1>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" class="form-control px-5" id="email" name="email" placeholder="Enter your email">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }} text-center" role="alert">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+                <form class="bg-light p-5" method="POST">
+                    <h1 class="text-center mb-4">Login</h1>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                    <div class="mt-3 text-center">
+                        <a href="register">Don't have an account? Sign up now</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="password">Pasword</label>
-                <input type="password" class="form-control px-5" id="password" name="password" placeholder="Enter your password">
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </form>        
+        </div>
     </div>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
