--- a/templates/registerpage.html
+++ b/templates/registerpage.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required pattern="^(?=.*[A-Z])(?=.*[!@#$&*])(?=.*[0-9]).{6,}$">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$">
                     </div>
                     <div class="form-group">
                         <label for="cpassword">Confirm Password</label>
