--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tasks</title>
+    <title>Tasks</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <style>
         .status-label {
@@ -12,119 +12,127 @@
             font-weight: bold;
             text-transform: uppercase;
             margin-bottom: 0.5rem;
+            display: inline-block;
+            width: 80px; 
+            text-align: center;
         }
     
-        .open {
+        .status-upcoming {
+            background-color: #ffc107;
+        }
+        
+        .status-open {
             background-color: #28a745;
-            color: white;
+            color: azure;
         }
-    
-        .closed {
+        
+        .status-closed {
             background-color: #dc3545;
-            color: white;
+            color: azure;
         }
-    
-        .upcoming {
-            background-color: rgb(255, 255, 72);
-            color: rgb(0, 0, 0); /* Adjust text color for visibility */
-        }
-        .border
-        {
+        
+        .task-card {
+            margin-bottom: 20px;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
             border-radius: 10px;
+        }
+        
+        .task-card:hover {
+            transform: scale(1.05);
+            z-index: 1;
+            box-shadow: 0 0 15px rgba(0,0,0,0.3);
+        }
+        
+        .card-link {
+            color: inherit;
+            text-decoration: none;
+        }
+        
+        .card-link:hover {
+            text-decoration: none;
+        }
+        
+        .card-link:focus, .card-link:hover {
+            color: inherit;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-                <a class="navbar-brand" href="{{ url_for('homepage') }}">Logo</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="{{ url_for('homepage') }}">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{{ url_for('tasks') }}">tasks</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="row">
-                {% for task, admin_name, employee_names in tasks %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card border">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+            <a class="navbar-brand" href="{{ url_for('homepage') }}">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('homepage') }}">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="row">
+            {% for task, admin_name, employee_name, task_status in tasks %}
+                <div class="col-md-4 mb-4">
+                    <a href="{{ url_for('taskdetail', task_id=task.task_id) }}" class="card-link">
+                        <div class="card border task-card">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col">
-                                        <h5 class="card-title">{{ task.task_name }}</h5>
-                                    </div>
-                                    <div class="col">
-                                        <div class="status-label {% if task.start_date > today %}upcoming{% elif not task.close_date or task.close_date > today %}open{% else %}closed{% endif %}">
-                                            {% if task.start_date > today %}
-                                            Upcoming
-                                        {% elif not task.close_date or task.close_date > today %}
-                                            Open
-                                        {% else %}
-                                            Closed
-                                        {% endif %}
-                                        </div>
-                                    </div>
+                                    <h5 class=" col card-title">{{ task.task_name }}</h5>
+                                <div class="col status-label {% if task_status == 'Upcoming' %}status-upcoming{% elif task_status == 'Open' %}status-open{% elif task_status == 'Closed' %}status-closed{% endif %}">
+                                    {{ task_status }}
                                 </div>
-                                
+                                </div>
                                 
                                 <p class="card-text">Start Date: {{ task.start_date }}</p>
                                 {% if task.close_date %}
                                     <p class="card-text">Close Date: {{ task.close_date }}</p>
                                 {% endif %}
                                 <p class="card-text">Admin: {{ admin_name }}</p>
-                                {% if employee_names %}
-                                    <p class="card-text">Employees:
-                                        {% for employee_name in employee_names %}
-                                            {{ employee_name }}{% if not loop.last %}, {% endif %}
-                                        {% endfor %}
-                                    </p>
+                                {% if employee_name %}
+                                    <p class="card-text">Employee: {{ employee_name }}</p>
                                 {% endif %}
                                 <div class="row">
                                     <div class="col">
-                                        <form action="{{ url_for('delete_task', task_id=task.task_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this task?');" class="col">
-                                            <button type="submit" class="btn btn-danger ">Delete Task</button>
+                                        <form action="{{ url_for('delete_task', task_id=task.task_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this task?');">
+                                            <button type="submit" class="btn btn-danger btn-sm">Delete Task</button>
                                         </form>
                                     </div>
-                                    
                                     <div class="col">
                                         <form action="{{ url_for('update_task', task_id=task.task_id) }}" method="GET">
-                                            <button type="submit" class="btn btn-primary">Update Task</button>
+                                            <button type="submit" class="btn btn-primary btn-sm">Update Task</button>
                                         </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                {% endfor %}
-                
-            </div>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} text-center" role="alert">
-                {{ message }}
-            </div>
+                    </a>
+                </div>
             {% endfor %}
-            {% endif %}
-            
-            {% endwith %}
-            
-            <a class="btn btn btn-primary " href="{{ url_for('addnewtask') }}"> add new task</a>
         </div>
         
-        
+        <a class="btn btn-primary" href="{{ url_for('addnewtask') }}">Add New Task</a>
 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center mt-3" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
