--- a/templates/addtasks.html
+++ b/templates/addtasks.html
@@ -50,7 +50,8 @@
                 <label for="close_date">Close Date:</label>
                 <input type="date" class="form-control" id="close_date" name="close_date" >
             </div>
-        
+            <label for="description">Description:</label>
+            <textarea class="form-control" id="description" name="description"></textarea>
             <div class="form-group">
                 <label for="employees">Assign to Employees:</label>
                 {% for employee in employees %}
