--- a/templates/employeepage.html
+++ b/templates/employeepage.html
@@ -56,6 +56,9 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('employee') }}">Tasks</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     </li>
@@ -65,9 +68,9 @@
         <h2>Assigned Tasks:</h2>
         
         <div class="row">
-            {% for task, admin_name, status,dayystoclose in tasks %}
+            {% for task, admin_name, status,daystoclose in tasks %}
                 <div class="col-md-4 mb-4">
-                    <a href="{{ url_for('taskdetails', task_id=task.task_id, employee_id=user.userid) }}" class="card-link">
+                    <a href="{{ url_for('taskdetails', token=task.token, etoken=user.Utoken) }}" class="card-link">
                         <div class="card task-card">
                             <div class="card-body">
                                 <div class="row">
@@ -87,14 +90,14 @@
                                 {% endif %}
                                 <p class="card-text">Assigned By: {{ admin_name }}</p>
                                 {% if task.close_date %}
-                                    {% if dayystoclose is not none and dayystoclose<3 %}
+                                    {% if daystoclose is not none and daystoclose<3 %}
                                     
                                     <p class="card-text text-center text-white bg-danger">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle mb-1" viewBox="0 0 16 16">
                                             <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
                                             <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
                                         </svg>
-                                        <strong>Days until close: {{ dayystoclose }}</strong>
+                                        <strong>Days until close: {{ daystoclose }}</strong>
                                     </p>
                                     {% endif %}
                                 {% endif %}
