--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="{{ url_for('homepage') }}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('tasks') }}">tasks</a>
+                        <a class="nav-link" href="{{ url_for('tasks') }}">Tasks</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
