--- a/templates/taskprog.html
+++ b/templates/taskprog.html
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label for="start_at">Start Date</label>
-                <input type="date" class="form-control" id="start_at" name="start_at" required>
+                <input type="date" class="form-control" id="start_at" name="start_at">
             </div>
             <button type="submit" class="btn btn-primary">Add Progression</button>
         </form>
