--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -36,6 +36,9 @@
             cursor: pointer;
             transition: transform 0.3s ease-in-out;
             border-radius: 10px;
+            width: 100%; /* Adjust to your desired max-width */
+            margin: auto; /* Center the card within its container */
+            max-width: 350px;
         }
         
         .task-card:hover {
@@ -57,6 +60,13 @@
             color: inherit;
             text-decoration: none;
         }
+        .btn {
+        white-space: nowrap; /* Prevent text from wrapping */
+        overflow: hidden;    /* Hide overflow text if necessary */
+        text-overflow: ellipsis; /* Optionally add ellipsis if text overflows */
+        }
+
+        
     </style>
 </head>
 <body>
@@ -80,40 +90,54 @@
                 </ul>
             </div>
         </nav>
-
-        <div class="row">
-            {% for task, admin_name, employee_name, task_status in tasks %}
-                <div class="col-md-4 mb-4">
-                    <a href="{{ url_for('taskdetail', task_id=task.task_id) }}" class="card-link">
+        <a class="btn btn-primary" href="{{ url_for('addnewtask') }}">Add New Task</a>
+        <div class="mt-2 flex row">
+            {% for task, admin_name, employee_names, task_status in tasks %}
+                <div class="col-md-4 mt-2 ">
+                    <a href="{{ url_for('taskdetail', token=task.token) }}" class="card-link">
                         <div class="card border task-card">
                             <div class="card-body">
                                 <div class="row">
-                                    <h5 class=" col card-title">{{ task.task_name }}</h5>
-                                <div class="col status-label {% if task_status == 'Upcoming' %}status-upcoming{% elif task_status == 'Open' %}status-open{% elif task_status == 'Closed' %}status-closed{% endif %}">
-                                    {{ task_status }}
-                                </div>
+                                    <h5 class="col card-title">{{ task.task_name }}</h5>
+                                    <div class="col status-label {% if task_status == 'Upcoming' %}status-upcoming{% elif task_status == 'Open' %}status-open{% elif task_status == 'Closed' %}status-closed{% else %}status-closed{% endif %}">
+                                        {{ task_status }}
+                                    </div>
                                 </div>
                                 
                                 <p class="card-text">Start Date: {{ task.start_date }}</p>
                                 {% if task.close_date %}
                                     <p class="card-text">Close Date: {{ task.close_date }}</p>
                                 {% endif %}
-                                <p class="card-text">Admin: {{ admin_name }}</p>
-                                {% if employee_name %}
-                                    <p class="card-text">Employee: {{ employee_name }}</p>
+                                <p class="card-text">Created By: {{ admin_name }}</p>
+                                {% if employee_names %}
+                                    <p class="card-text">Assigned To: {{ employee_names }}</p>
                                 {% endif %}
-                                <div class="row">
+                                <div class="d-flex row">
                                     <div class="col">
                                         <form action="{{ url_for('delete_task', task_id=task.task_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this task?');">
                                             <button type="submit" class="btn btn-danger btn-sm">Delete Task</button>
                                         </form>
                                     </div>
                                     <div class="col">
-                                        <form action="{{ url_for('update_task', task_id=task.task_id) }}" method="GET">
+                                        <form action="{{ url_for('update_task', token=task.token) }}" method="GET">
                                             <button type="submit" class="btn btn-primary btn-sm">Update Task</button>
                                         </form>
                                     </div>
+                                    <div class="col mr-4">
+                                        <form action="{{ url_for('tasks') }}" method="POST">
+                                            <input type="hidden" name="task_id" value="{{ task.task_id }}">
+                                            {% if task.status == 'COMPLETED' or task.status == 'task Closed By Admin' %}
+                                                <input type="hidden" name="opentask">
+                                                <button type="submit" class="btn btn-sm btn-success">Open the task</button>
+                                            {% endif %}
+                                            {% if task.status == 'In Progress' %}
+                                                <input type="hidden" name="closetask">
+                                                <button type="submit" class="btn btn-sm btn-warning">Close the task</button>
+                                            {% endif %}
+                                        </form>
+                                    </div>
                                 </div>
+                                
                             </div>
                         </div>
                     </a>
@@ -121,7 +145,8 @@
             {% endfor %}
         </div>
         
-        <a class="btn btn-primary" href="{{ url_for('addnewtask') }}">Add New Task</a>
+        
+        
 
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
