--- a/templates/update_task.html
+++ b/templates/update_task.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
     <h2>Update Task</h2>
-    <form action="{{ url_for('update_task', task_id=task.task_id) }}" method="POST">
+    <form action="{{ url_for('update_task', token=task.token) }}" method="POST">
         <div class="form-group">
             <label for="task_name">Task Name:</label>
             <input type="text" class="form-control" id="task_name" name="task_name" value="{{ task.task_name }}" required>
