--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -5,21 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script>
-        // Function to reload the page once
-        function refreshOnce() {
-            // Check if a session storage key 'pageRefreshed' exists
-            if (!sessionStorage.getItem('pageRefreshed')) {
-                // Set a session storage key to indicate the page has been refreshed
-                sessionStorage.setItem('pageRefreshed', 'true');
-                // Reload the page
-                window.location.reload();
-            } else {
-                // Clear the session storage key for subsequent visits
-                sessionStorage.removeItem('pageRefreshed');
-            }
-        }
-        </script>
+   
 </head>
 <body onload="refreshOnce()">
     <div class="container">
@@ -50,7 +36,16 @@
                     <div class="mt-3 text-center">
                         <a href="register">Don't have an account? Sign up now</a>
                     </div>
+                    
+                    
+                    <a href="{{ url_for('telegram_login') }}" class="btn btn-primary">Login with Telegram</a>
                 </form>
+                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="abdoafakibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+                    <script type="text/javascript">
+                    function onTelegramAuth(user) {
+                    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+                    }
+                    </script>
             </div>
         </div>
     </div>
