--- a/templates/admin/taskdetail.html
+++ b/templates/admin/taskdetail.html
@@ -48,7 +48,15 @@
             </ul>
         </div>
     </nav>
-
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }} text-center" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
     <div class="card mt-4">
         <div class="card-body px-5">
             <div class="row">
@@ -68,10 +76,12 @@
                 <p class="col"><strong>Start Date:</strong> {{ task.start_date }}</p>
                 <p class="col"><strong>Close Date:</strong> {{ task.close_date }}</p>
             </div>
+            {%if task.description%}
             <div class="mt-3">
                 <h5 class="font-weight-bold">Description:</h5>
                 <p class="border p-3 bg-light rounded">{{ task.description }}</p>
             </div>
+            {%endif%}
             
             <p><strong>Assigned Admin:</strong> {{ task.admin.fulname }}</p>
             <h3 class="card-title">Task Progressions</h3>
