--- a/templates/admin/tasks.html
+++ b/templates/admin/tasks.html
@@ -104,6 +104,9 @@
                     </div>
                 </div>
             </form>
+            <div class="search-bar mt-4">
+                <input type="text" id="searchBar" class="form-control" placeholder="Search tasks by name...">
+            </div>
             <div class="col-auto mt-4">
                 <a class="btn btn-primary" href="{{ url_for('addnewtask') }}">Add New Task</a>
             </div>
