--- a/templates/admin/update_task.html
+++ b/templates/admin/update_task.html
@@ -29,6 +29,15 @@
         </div>
     </nav>
     <h2>Update Task</h2>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     <form action="{{ url_for('update_task', token=task.token) }}" method="POST">
         <div class="form-group">
             <label for="task_name">Task Name:</label>
