--- a/templates/employee/taskdetails.html
+++ b/templates/employee/taskdetails.html
@@ -34,10 +34,10 @@
             </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('employee') }}">Tasks</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="{{ url_for('personaltasks') }}">personal task</a>
                 </li>
                 <li class="nav-item">
@@ -46,7 +46,15 @@
             </ul>
         </div>
     </nav>
-
+    {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
     <div class="card mt-4">
         <div class="card-body px-5">
             <div class="row">
