--- a/templates/admin/tasks/taskdetail.html
+++ b/templates/admin/tasks/taskdetail.html
@@ -29,31 +29,7 @@
 <body>
 
 <div class="container ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">projects</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">teams</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'admin/components/navbar.html' %}
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         {% for category, message in messages %}
@@ -100,6 +76,7 @@
                 {% for progression in task_progressions %}
                     <li class="list-group-item">
                         <p><strong>Progress Name:</strong> {{ progression.progname }}</p>
+                        <p><strong>Made By:</strong> {{ progression.employee.fulname }}</p>
                         <p><strong>Start Date:</strong> {{ progression.start_at }}</p>
                         <p><strong>Completed at:</strong>
                             {% if progression.end_at is not none %}
@@ -136,7 +113,7 @@
                 {% if task.status=='In Progress' %}
                     <form class="col-sm-2   mt-1" method="POST" >
                         <input type="hidden" name="closetask">
-                        <button type="submit" class="btn btn-warning">close the task</button>
+                        <button type="submit" class="btn btn-sm btn-warning">close the task</button>
                     </form>            
                 {% endif %}
                 
