--- a/templates/admin/projects/addproject.html
+++ b/templates/admin/projects/addproject.html
@@ -7,33 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container mt-4">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-            <a class="navbar-brand" href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">Projects</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">Teams</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <div class="container ">
+        {% include 'admin/components/navbar.html' %}
         <h2>Create New Project</h2>
         <form method="POST" action="{{ url_for('admin_routes.create_project') }}">
             <div class="form-group">
