--- a/templates/admin/projects/projects.html
+++ b/templates/admin/projects/projects.html
@@ -12,73 +12,81 @@
         .card-container {
             margin-bottom: 1rem;
         }
+        .project_card {
+            margin-bottom: 20px;
+            
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+            border-radius: 10px;
+            width: 100%; 
+            margin: auto; 
+            min-width: 330px;
+        }
+        
+        .project_card:hover {
+            transform: scale(1.05);
+            z-index: 1;
+            box-shadow: 0 0 15px rgba(0,0,0,0.3);
+        }
+    .card-link {
+        color: inherit;
+        text-decoration: none;
+    }
+    
+    .card-link:hover {
+        text-decoration: none;
+    }
+    
+    .card-link:focus, .card-link:hover {
+        color: inherit;
+        text-decoration: none;
+    }
+    
     </style>
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-            <a class="navbar-brand" href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">Teams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% include 'admin/components/navbar.html' %}
         <h2>Projects</h2>
-        <a href="{{ url_for('admin_routes.create_project') }}" class="btn btn-primary mb-3">Create New Project</a>
-
-        <!-- Search Form -->
-        <form class="form-inline mb-4">
-            <input class="form-control mr-sm-2" type="search" id="searchBox" placeholder="Search by project name" aria-label="Search">
-        </form>
-
-        <!-- Card Layout for Projects -->
+        <div class="row align-items-center ml-2 px-4">
+            <a href="{{ url_for('admin_routes.create_project') }}" class="col-auto btn btn-primary mb-3">Create New Project</a>
+            <form class="col-auto form-inline mb-3">
+                <input class="form-control mr-sm-2" type="search" id="searchBox" placeholder="Search by project name" aria-label="Search">
+            </form>
+        </div>
         <div class="row" id="projectsList">
             {% for project in projects %}
             <div class="col-md-4 mb-3">
-                <div class="card card-container">
-                    <div class="card-body">
-                        <h3 class="card-title">{{ project.project_name }}</h3>
-                        <p class="card-text">{{ project.description }}</p>
-                        <p><strong>Status: </strong>{{ project.statut }}</p>
-                        <p><strong>Start Date:</strong> {{ project.start_date }}</p>
-                        <p><strong>End Date:</strong> {{ project.end_date }}</p>
-                        <p><strong>Teams Worked On Project:</strong></p>
-                        <ul>
-                            {% for team in project.teams %}
-                                <li>{{ team.team_name }}</li>
-                            {% else %}
-                                <li>No teams assigned</li>
-                            {% endfor %}
-                        </ul>
-                        <div class="d-flex justify-content-between">
-                            <!-- Update Button -->
-                            <a href="{{ url_for('admin_routes.update_project', token=project.token) }}" class="btn btn-primary btn-sm">Update</a>
-                            
-                            <!-- Delete Button -->
-                            <form action="{{ url_for('admin_routes.delete_project', project_id=project.project_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this project?');">
-                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                            </form>
+                <a href="{{ url_for('admin_routes.project_details', token=project.token) }}" class="card-link">
+                    <div class="card card-container project_card">
+                        <div class="card-body">
+                            <h3 class="card-title">{{ project.project_name }}</h3>
+                            <p class="card-text">{{ project.description }}</p>
+                            <p><strong>Status: </strong>{{ project.statut }}</p>
+                            <p><strong>Start Date:</strong> {{ project.start_date }}</p>
+                            <p><strong>End Date:</strong> {{ project.end_date }}</p>
+                            <p><strong>Teams Worked On Project:</strong></p>
+                            <ul>
+                                {% for team in project.teams %}
+                                    <li>{{ team.team_name }}</li>
+                                {% else %}
+                                    <li>No teams assigned</li>
+                                {% endfor %}
+                            </ul>
+                                <div class="d-flex flex-row">
+                                    <div  class="mr-2">
+                                    <a href="{{ url_for('admin_routes.update_project', token=project.token) }}" class="btn btn-primary btn-sm">Update</a>
+                                    </div>
+                                    
+                                    <div  class="mr-2">
+                                        <form  action="{{ url_for('admin_routes.delete_project', project_id=project.project_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this project?');">
+                                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
+                                    </div>    
+                                </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
             {% endfor %}
         </div>
