--- a/templates/admin/tasks/addtasks.html
+++ b/templates/admin/tasks/addtasks.html
@@ -15,32 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-            <!-- Navbar content -->
-            <a class="navbar-brand"  href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">Teams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% include 'admin/components/navbar.html' %}
         <h2 class="mb-4">Create New Task</h2>
         <form action="{{ url_for('admin_routes.addnewtask') }}" method="POST">
             <div class="form-group">
@@ -62,7 +37,7 @@
                 <label for="description">Description:</label>
                 <textarea class="form-control" id="description" name="description"></textarea>
             </div>
-
+            
             <div class="form-group">
                 <label for="project">Select Project:</label>
                 <select class="form-control" id="project" name="project_id" onchange="updateEmployeeList()">
