--- a/templates/admin/tasks/tasks.html
+++ b/templates/admin/tasks/tasks.html
@@ -71,31 +71,7 @@
 </head>
 <body>
     <div class="container flex">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-            <a class="navbar-brand" href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">projects</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">teams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% include 'admin/components/navbar.html' %}
         <div class="row align-items-center ml-2 px-4">
             <form id="filterForm" class="col-auto">
                 <div class="form-row align-items-center">
@@ -123,10 +99,10 @@
             </form>
             
             <div class="search-bar mt-4">
-                <input type="text" id="searchBar" class="form-control" placeholder="Search tasks by name...">
+                <input   id="searchBar" class="form-control" type="search" placeholder="Search tasks by name...">
             </div>
             <div class="col-auto mt-4">
-                <a class="btn btn-primary" href="{{ url_for('admin_routes.addnewtask') }}">Add New Task</a>
+                <a class="btn btn-primary" href="{{ url_for('admin_routes.addnewtask') }}">Create New task</a>
             </div>
         </div>
         
