--- a/templates/admin/teams/updateteam.html
+++ b/templates/admin/teams/updateteam.html
@@ -22,31 +22,7 @@
 </head>
 <body>
     <div class="container ">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-            <a class="navbar-brand" href="{{ url_for('admin_routes.usersdashboard') }}">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.usersdashboard') }}">Users <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.tasks') }}">Tasks</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="{{ url_for('admin_routes.projects') }}">Projects</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('admin_routes.teams') }}">Teams</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% include 'admin/components/navbar.html' %}
         <h2>Update Team</h2>
         <form method="POST" action="{{ url_for('admin_routes.update_team', TETOKEN=team.TETOKEN) }}">
             <div class="form-group">
